# dotfiles

./: .gitignore  .gitignore_global  .gitmodules  .ideavimrc  .zshrc  .zshrc.pre-oh-my-zsh  AGENTS.md  CLAUDE.md  INSTALL.md  NEOTEST_JAVA_INHERITED_TESTS_SUMMARY.md  README.md  Untitled  pkglist.txt  temp.txt
.github/: copilot-instructions.md
ai/: conversations.md
cron/: README.md
git/: .gitconfig  .gitconfig-ar  .gitignore_global  README.md
hyprland/: README.md  TODO.txt
idea/: .ideavimrc  Catppuccin_Mocha.icls  actions_list.txt
information/: color-temperature.md
mpd-config/: README.md
scripts/: apply-display-settings.w.sh  bible  volume  (+6 more)
xmobar/.config/xmobar/: README.md  hie.yaml  old.xmobarrc  stack.yaml  trayerrc  xmobar-config.cabal  xmobar-run  xmobar-run.sh  xmobar-runner  xmobar-toggle  xmobar.hs  xmobarrc.hs
xmobar/.config/xmobar/lib/Module/: Battery.hs  Date.hs  Runner.hs  RunnerApp.hs  RunnerTemplate.hs  Simple.hs  System.hs  Variable.hs  Volume.hs
xmobar/.config/xmobar/lib/Util/: Common.hs  Element.hs  Variable.hs
xmobar/.config/xmobar/resources/: book.xpm  browser.xpm  haskell.xpm  intellij.xpm  power.xpm  qbittorrent.xpm  settings.xpm  terminal.xpm  ubuntu-icon-multi_24.xpm
xmobar/.config/xmobar/shell/: module.colorscheme  module.open-weather  volume-decrease.sh  volume-increase.sh  volume-toggle.sh  xmobar-run.sh
xmobar/.config/xmobar/trayer/: trayer-run  trayer-run.sh  trayer-toggle  trayer-toggle.sh  trayerrc  trayerrc.sh
xmonad/.config/xmonad/: .fourmolu.yaml  README.md  deps.md  fourmolu.yaml  hie.yaml  notes.txt  stack.yaml  xmonad-config.cabal  xmonad.hs  xmonad2.hs
xmonad/.config/xmonad/lib.bak/: lib.cabal
xmonad/.config/xmonad/lib/Color/: DoomOne.hs  Dracula.hs  GruvboxDark.hs  MonokaiPro.hs  Nord.hs  OceanicNext.hs  Palenight.hs  SolarizedDark.hs  SolarizedLight.hs  TomorrowNight.hs
xmonad/.config/xmonad/lib/Module/: Keybind.hs  Layout.hs  ModuleTest.hs  Scratchpad.hs  Startup.hs  Variable.hs  WinRule.hs  Xmobar.hs
xmonad/.config/xmonad/lib/Util/: Common.hs  CommonTwo.hs
xmonad/.config/xmonad/lib/Util/Env/: Environment.hs
xmonad/.config/xmonad/lib/Utils/: Common.hs  CommonTwo.hs
(+1422 files in other folders)
