cabal-version:       2.2
name:                xmobar-config
version:             0.1.0.0
build-type:          Simple

executable xmobar-config
  hs-source-dirs:      .
                     , lib
  main-is:             xmobar.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , xmobar
                     , directory
                     , containers

  -- ghc-options:         -Wall
  --                      -Wcompat
  --                      -Widentities
  --                      -Wincomplete-record-updates
  --                      -Wincomplete-uni-patterns
  --                      -Wmissing-export-lists
  --                      -Wmissing-home-modules
  --                      -Wpartial-fields
  --                      -Wredundant-constraints

-- List of all custom libraries that need to be loaded on start by hls
 other-modules:        Util.Common
                     , Util.Variable
                     , Module.Battery
                     , Module.Date
                     , Module.Runner
                     , Module.Simple
                     , Module.System
                     , Module.Volume