cabal-version:       1.12
name:                xmonad-config
version:             0.1.0.0
build-type:          Simple

executable xmonad-config
  main-is:             xmonad.hs
  hs-source-dirs:      .
                     , lib
  build-depends:       base
                     , directory
                     , containers
                     , xmonad
                     , xmonad-contrib
  default-language:    Haskell2010

-- List of all custom libraries that need to be loaded on start by hls
 other-modules:        Util.Common
                     , Util.CommonTwo
                     , Util.Env.Environment
                     , Color.DoomOne
                     , Module.ModuleTest
                     , Module.Variable
                     , Module.Layout
                     , Module.Scratchpad